[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msnpip"
version = "0.1.0"
description = "Morphometric Similarity Network Imaging Transcriptomics Pipeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Francesco Tomasella" }
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "nibabel>=5.0.0",
    "nilearn>=0.10.0",
    "neuromaps>=0.0.4",
    "imaging_transcriptomics>=1.1.9",
    "gseapy>=1.0.0",
]

[project.scripts]
msnpip = "msnpip.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
msnpip = ["genes/*.gmt", "data/*"]
